New in spot 2.9.4.dev  (not yet released)

  Build:

  - Spot is now built in C++17 mode, so you need at least GCC 7 or
    clang 5 to compile it.  The current versions of all major linux
    distributions ship with at least GCC 7.4, so this should not be a
    problem.  There is also an --enable-c++20 option to configure in
    case you want to force a build of Spot in C++20 mode.

  Library:

  - Historically, Spot labels automata by Boolean formulas over
    atomic propositions. These Boolean formulas are represented
    as BDDs using the BuDDy library. Since this implementation is
    not thread safe, Spot wasn't able, until now, to integrate
    parallel algorithms. To bypass this limitation, we introduce the
    cube data structure. This structure aims to replace BDDs
    everywhere parallelism is required. Contrary to BDDs, this
    structure is not able to represent complex boolean formulae, but
    can represent very simple disjunctive form of boolean formulae
    and can be used in a multithreaded context.

    Since both the BDD-based and the cube-based implementations have
    benefits and drawbacks, we opted to keep side-by-side the
    historical implementation and the new one. As a consequence:
    twacube and kripkecube are the new versions of twa and kripke.
    We provide conversion back and forth throught the following
    functions: twacube_to_twa, twa_to_twa, product_to_twa, and
    kripkecube_to_twa. The equivalence between a twa and a twacube
    can be checked using are_equivalent.

    In addition to the previous conversion, we implemented various
    state-of-the-art algorithms: bloemen.16.ppopp, bloemen.16.hvc,
    evangeslita.12.atva, renault.13.lpar, holzmann.11.ieee. In order
    to ease the manipulation of these algorithms we introduce a
    factory mc_instanciator, that provide a nice abstraction for launching,
    pinning, and stopping threads inside of parallel model-checking